# scaptcha

./: .env.example  .gitignore  README.md  captcha.js  challenge.js  pyproject.toml  pytest.ini  requirements.txt  t.ts
app/: __init__.py  main.py  proxies.py
app/conf/: config.py
app/webdriver/: __init__.py  undetected_chromedriver.py
extension/: always_active.crx  always_active.pem  fingerprint_defender.crx  fingerprint_defender.pem  webrtc_control.crx  webrtc_control.pem
extension/webrtc_control/: manifest.json
extension/webrtc_control/data/content_script/page_context/: media_devices.js
extension/webrtc_control/lib/: chrome.js  common.js
files/: proxy_example.txt
static/: interceptor-3.6.2.js  procerror-3.6.2.js  validate-3.6.2.js  validate-old.js  validate.js
